--- a/Practise.html
+++ b/Practise.html
@@ -51,7 +51,7 @@
     }
 
     main {
-      padding-top: 80px; /* to offset fixed header */
+      padding-top: 80px;
       max-width: 900px;
       margin: 0 auto;
       padding-left: 20px;
@@ -63,7 +63,6 @@
       border-bottom: 1px solid #ddd;
     }
 
-    /* Hero Section */
     #hero {
       text-align: center;
       background: #222;
@@ -84,7 +83,6 @@
       margin: 0 auto;
     }
 
-    /* About */
     #about {
       display: flex;
       flex-wrap: wrap;
@@ -109,21 +107,30 @@
       color: #f5a623;
     }
 
-    #about p {
-      font-size: 1.1rem;
-      line-height: 1.5;
+    #skills .skill-section {
+      margin-bottom: 30px;
     }
 
-    /* Skills */
-    #skills ul {
-      list-style: none;
-      display: flex;
+    .skill-section label {
+      display: block;
+      font-weight: bold;
+      margin: 10px 0;
+      cursor: pointer;
+      color: #f5a623;
+    }
+
+    .skill-list {
+      display: none;
       flex-wrap: wrap;
-      gap: 15px;
-      padding-left: 0;
+      gap: 10px;
+      margin-top: 10px;
     }
 
-    #skills li {
+    input[type="checkbox"]:checked + label + .skill-list {
+      display: flex;
+    }
+
+    .skill {
       background: #f5a623;
       color: #222;
       padding: 10px 20px;
@@ -134,11 +141,6 @@
       cursor: default;
     }
 
-    #skills li:hover {
-      background: #e59400;
-    }
-
-    /* Projects */
     #projects .project-list {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -162,25 +164,6 @@
       margin-bottom: 10px;
     }
 
-    .project p {
-      font-size: 1rem;
-      color: #555;
-      margin-bottom: 10px;
-    }
-
-    .project a {
-      text-decoration: none;
-      color: #222;
-      font-weight: 700;
-      border-bottom: 2px solid transparent;
-      transition: border-color 0.3s ease;
-    }
-
-    .project a:hover {
-      border-color: #f5a623;
-    }
-
-    /* Contact */
     #contact form {
       max-width: 500px;
       margin: 0 auto;
@@ -212,7 +195,6 @@
       background: #e59400;
     }
 
-    /* Footer */
     footer {
       text-align: center;
       padding: 20px 10px;
@@ -221,41 +203,27 @@
       background: #222;
       margin-top: 40px;
     }
-
-    /* Responsive */
-    @media (max-width: 700px) {
-      #about {
-        flex-direction: column;
-        text-align: center;
-      }
-
-      #about div {
-        flex: none;
-      }
-    }
   </style>
 </head>
 <body>
-
   <header>
     <h1>Lakshmi</h1>
     <nav>
       <a href="#hero">Home</a>
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
-      <a href="#projects">Projects</a>
+      <a href="projects.html">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
   <main>
     <section id="hero">
-  <h2>Hello, I'm Lakshmi Prasanna</h2>
-  <p>Developer & UI/UX Designer passionate about building scalable, user-friendly web applications with clean code and great design.</p>
-</section>
+      <h2>Hello, I'm Lakshmi Prasanna</h2>
+      <p>Developer & UI/UX Designer passionate about building scalable, user-friendly web applications with clean code and great design.</p>
+    </section>
 
-<section id="about">
-  <section id="about">
+    <section id="about">
       <img src="https://i.pravatar.cc/250" alt="Lakshmi Prasanna Photo" />
       <div>
         <h3>About Me</h3>
@@ -265,125 +233,72 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
         <p>When I'm not coding, you'll find me exploring new tech trends, sketching UI ideas, or hiking outdoors.</p>
       </div>
     </section>
-  <h3>Background</h3>
-  <p> I’ve had a creative and evolving journey into the tech world, blending my background in visual communication and UI/UX design with strong technical skills. 
-    I began my career in the creative industry and later transitioned into tech, gaining experience in frontend development and full-stack Java projects. 
-    Over time, I’ve expanded my toolkit with data analytics, SQL, Python, R, and business intelligence (BI) tools — bringing a unique mix of design thinking and data-driven decision-making. </p>
-  <blockquote>"I love crafting user-friendly digital experiences and making sense of data — and I haven’t looked back since."</blockquote>
+ <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; font-family: 'Segoe UI', sans-serif; color: #333;">
+  <div style="background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+    <h3>🎨 Background</h3>
+    <p>I’ve had a creative and evolving journey into the tech world, blending my background in visual communication and UI/UX design with strong technical skills. I began my career in the creative industry and later transitioned into tech, gaining experience in frontend development and full-stack Java projects. Over time, I’ve expanded my toolkit with data analytics, SQL, Python, R, and business intelligence (BI) tools bringing a unique mix of design thinking and data-driven decision-making.</p>
+    <blockquote style="font-style: italic; color: #555; margin: 10px 0 0 0; padding-left: 10px; border-left: 3px solid #00a6a6;">
+      "I love crafting user-friendly digital experiences and making sense of data and I haven’t looked back since."
+    </blockquote>
+  </div>
 
-  <h3>Interests</h3>
-  <p> In my spare time, I explore UI/UX trends, build frontend components with React, and analyze data using SQL, Python, and BI dashboards.
-    Currently, I’m sharpening my data analytics and BI skills while continuing to design seamless digital experiences.
-    Other interests include product design, emerging tech, personal finance, reading, health & wellness, and exploring the power of AI in creativity. </p>
+  <div style="background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+    <h3>💡 Interests</h3>
+    <p>In my spare time, I explore UI/UX trends, build frontend components with React, and analyze data using SQL, Python, and BI dashboards. Currently, I’m sharpening my data analytics and BI skills while continuing to design seamless digital experiences. Other interests include product design, emerging tech, personal finance, reading, health & wellness, and exploring the power of AI in creativity.</p>
+  </div>
 
-  <h3>Current Role</h3>
-  <p> I’m currently working as a UI/UX Designer, focused on intuitive design systems, wireframes, and improving user journeys.
-    Previously, I worked as a Full Stack Java Developer, leading both frontend and backend work across scalable systems.
-    I’ve also worked with SQL, Python, R, and BI tools to generate insights that support better user and business outcomes.
-    I’m actively seeking opportunities where I can combine UI/UX, frontend, and data to build impactful tech products.</p>
-</section>
- <section id="skills">
-        <h2>My Skills</h2>
-        <div class="skills">
-            <!-- Frontend Section -->
-        <div class="skills-column">
-            <input type="checkbox" id="frontend" style="display:none;">
-            <label for="frontend">🎨 Frontend Development</label>
-            <div class="skill-list">
-                <div class="skill">⚛️ React.js</div>
-                <div class="skill">📜 JavaScript / TypeScript</div>
-                <div class="skill">📜Flexbox & Responsive Design</div>
-                <div class="skill">🎨 CSS3 </div>
-                <div class="skill">🖼️ HTML5</div>
-            </div>
+  <div style="background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+    <h3>👩‍💻 Current Role</h3>
+    <p>I’m currently working as a UI/UX Designer, focused on intuitive design systems, wireframes, and improving user journeys. Previously, I worked as a Full Stack Java Developer, leading both frontend and backend work across scalable systems. I’ve also worked with SQL, Python, R, and BI tools to generate insights that support better user and business outcomes. I’m actively seeking opportunities where I can combine UI/UX, frontend, and data to build impactful tech products.</p>
+  </div>
+      </div>
+    </section>
+
+    <section id="skills">
+      <h2>My Skills</h2>
+
+      <div class="skill-section">
+        <input type="checkbox" id="frontend">
+        <label for="frontend">🎨 Frontend Development</label>
+        <div class="skill-list">
+          <div class="skill">⚛️ React.js</div>
+          <div class="skill">📜 JavaScript / TypeScript</div>
+          <div class="skill">📜Flexbox & Responsive Design</div>
+          <div class="skill">🎨 CSS3 </div>
+          <div class="skill">🖼️ HTML5</div>
         </div>
+      </div>
 
-        <!-- UX Design & Research-->
-        <div class="skills-column">
-            <input type="checkbox" id="Design" style="display:none;">
-            <label for="Design">🎨UX Design & Research</label>
-            <div class="skill-list">
-                <div class="skill">Wireframing</div>
-                <div class="skill">Prototyping</div>
-                <div class="skill">Interaction Design</div>
-                <div class="skill">User Flows</div>
-                <div class="skill">Competitive Analysis</div>
-                <div class="skill">Mapping</div>
-                <div class="skill">WCAG 2.1</div>
-            </div>
+      <div class="skill-section">
+        <input type="checkbox" id="uxdesign">
+        <label for="uxdesign">🎯 UX Design & Research</label>
+        <div class="skill-list">
+          <div class="skill">Wireframing</div>
+          <div class="skill">Prototyping</div>
+          <div class="skill">User Flows</div>
+          <div class="skill">WCAG 2.1</div>
         </div>
-    </div>
+      </div>
 
-    <!-- UI/UX Design Section -->
-    <input type="checkbox" id="uiux" style="display:none;">
-    <label for="uiux">🎨 UI/UX Design</label>
-    <div class="skill-list">
-        <div class="skill">📐 Figma</div>
-        <div class="skill">🖌️ Adobe XD</div>
-        <div class="skill">🏞️ Adobe Creative Suite</div>
-        <div class="skill">📝 Sketch</div>
-        <div class="skill">📝 InVision</div>
-        <div class="skill">Zeplin & Principle</div>
-        <div class="skill">📊 Wireframing & Prototyping</div>
-        <div class="skill">👨‍💻 User Journey Mapping</div>
-    </div>
+      <div class="skill-section">
+        <input type="checkbox" id="uiux">
+        <label for="uiux">🖌️ UI/UX Tools</label>
+        <div class="skill-list">
+          <div class="skill">Figma</div>
+          <div class="skill">Adobe XD</div>
+          <div class="skill">Sketch</div>
+          <div class="skill">InVision</div>
+        </div>
+      </div>
 
-    <!-- Design  Section -->
-    <input type="checkbox" id="Design " style="display:none;">
-    <label for="Design ">📐Design </label>
-    <div class="skill-list">
-        <div class="skill">Atomic Design</div>
-        <div class="skill">Token-based Design</div>
-        <div class="skill">Component-driven UI</div>
-        <div class="skill">Cross-platform Consistency</div>
-    </div>
-
-<!-- Agile Environment-->
-    <input type="checkbox" id="Agile" style="display:none;">
-    <label for="Agile">Agile Environment</label>
-    <div class="skill-list">
-        <div class="skill">Scrum</div>
-        <div class="skill">Sprint Planning</div>
-        <div class="skill">GitHub</div>
-        <div class="skill">GitLab</div>
-        <div class="skill">Slack</div>
-    </div>
-    <!-- Data-Driven Design< -->
-    <input type="checkbox" id="Data<" style="display:none;">
-    <label for="Data">📦 Data-Driven Design<</label>
-    <div class="skill-list">
-        <div class="skill">🗄️ MySQL</div>
-        <div class="skill">User Research</div>
-        <div class="skill">Surveys</div>
-        <div class="skill">📊 Tableau / Power BI & Data Visualization</div>
-         <div class="skill">🐍 R</div>
-         <div class="skill">🐘 PHP</div>
+      <div class="skill-section">
+        <input type="checkbox" id="data">
+        <label for="data">📊 Data & Analytics</label>
+        <div class="skill-list">
+          <div class="skill">SQL</div>
           <div class="skill">Python</div>
-         <div class="skill">Analytics</div>
-        <div class="skill">🖥️ WordPress / Shopify</div>
-        <div class="skill">A/B Testing</div>
-        <div class="skill">🐧 Linux Administration</div>
-    </div>
-</section> 
-    <section id="projects">
-      <h3>Projects</h3>
-      <div class="project-list">
-        <div class="project">
-          <h4>Salon & Spa Website App </h4>
-          <p>A full-stack web app to manage insurance claims, built with React, Spring Boot, and AWS.</p>
-          <a href="https://github.com/princeseth/hair-loss-claims" target="_blank" rel="noopener noreferrer">View on GitHub</a>
-        </div>
-
-        <div class="project">
-          <h4>Clothing App</h4>
-          <p>Streamlined order processing and live tracking system with React and Spring Boot.</p>
-          <a href="https://github.com/princeseth/fuel-supply-chain" target="_blank" rel="noopener noreferrer">View on GitHub</a>
-        </div>
-
-        <div class="project">
-          <h4>Carbon Footprint Calculator</h4>
-          <p>A simple web app to estimate carbon emissions with clean UI and React.</p>
-          <a href="https://github.com/princeseth/carbon-footprint" target="_blank" rel="noopener noreferrer">View on GitHub</a>
+          <div class="skill">R</div>
+          <div class="skill">Power BI</div>
         </div>
       </div>
     </section>
@@ -400,8 +315,19 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
     </section>
   </main>
 
+ <footer style="text-align: center; padding: 15px; background: #f1f1f1; font-family: Arial, sans-serif; color: #555;">
+  <br /><br />
+  <a href="https://www.linkedin.com/in/your-linkedin" target="_blank" style="margin: 0 10px; display: inline-block;">
+    <img src="https://cdn-icons-png.flaticon.com/24/174/174857.png" alt="LinkedIn" style="width:24px; height:24px;">
+  </a>
+  <a href="mailto:your.email@example.com" style="margin: 0 10px; display: inline-block;">
+    <img src="https://cdn-icons-png.flaticon.com/24/732/732200.png" alt="Gmail" style="width:24px; height:24px;">
+  </a>
+  <a href="https://medium.com/@your-medium" target="_blank" style="margin: 0 10px; display: inline-block;">
+    <img src="https://cdn-icons-png.flaticon.com/24/5968/5968866.png" alt="Medium" style="width:24px; height:24px;">
+  </a>
+</footer>
   <script>
-    // Smooth scroll for nav links
     document.querySelectorAll('nav a').forEach(anchor => {
       anchor.addEventListener('click', e => {
         e.preventDefault();
@@ -410,16 +336,13 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
       });
     });
 
-    // Simple contact form submission simulation
     const form = document.getElementById('contactForm');
     const formMessage = document.getElementById('formMessage');
-
     form.addEventListener('submit', e => {
       e.preventDefault();
       formMessage.textContent = 'Sending...';
-
       setTimeout(() => {
-        formMessage.textContent = 'Thank you for reaching out! I will get back to you soon.';
+        formMessage.textContent = 'Thank you! I will get back to you soon.';
         form.reset();
       }, 1500);
     });
