--- a/Salon.html
+++ b/Salon.html
@@ -186,7 +186,7 @@
     <li>Wellness & dermatology services</li>
   </ul>
 
-  <a href="projects.html">← Back to Projects</a>
+  <a href="https://github.com/valluripalli27/mine-/blob/main/project.html">← Back to Projects</a>
 
 </body>
 </html>
