--- a/project.html
+++ b/project.html
@@ -178,7 +178,7 @@
   <h1>Projects</h1>
 
   <div class="gallery">
-    <a class="gallery-item" href="salon-spa.html">
+    <a class="gallery-item" href="https://github.com/valluripalli27/mine-/blob/main/Salon.html">
       <img src="images/salon.jpg" alt="Salon Project" />
       <div class="project-info">
         <h3>Salon Booking App</h3>
