--- a/project.html
+++ b/project.html
@@ -186,7 +186,7 @@
       </div>
     </a>
 
-    <a class="gallery-item" href="clothing-app.html">
+    <a class="gallery-item" href="https://github.com/valluripalli27/clothing-app-/blob/main/index.html">
       <img src="images/clothing.jpg" alt="Clothing App" />
       <div class="project-info">
         <h3>Clothing E-Commerce</h3>
