--- a/project.html
+++ b/project.html
@@ -194,7 +194,7 @@
       </div>
     </a>
 
-    <a class="gallery-item" href="carbon-calculator.html">
+    <a class="gallery-item" href="https://github.com/valluripalli27/Carbon-Footprint-Calculator/blob/main/index.html">
       <img src="images/carbon.jpg" alt="Carbon Calculator" />
       <div class="project-info">
         <h3>Carbon Footprint Calculator</h3>
