--- a/project.html
+++ b/project.html
@@ -187,7 +187,7 @@
     </a>
 
     <a class="gallery-item" href="https://github.com/valluripalli27/clothing-app-/blob/main/index.html">
-      <img src="images/clothing.jpg" alt="Clothing App" />
+      <img src="images/Cloth.jpg" alt="Clothing App" />
       <div class="project-info">
         <h3>Clothing E-Commerce</h3>
         <p>Fashionista • 2019</p>
