--- a/Index.html
+++ b/Index.html
@@ -212,7 +212,7 @@
       <a href="#hero">Home</a>
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
-      <a href="https://valluripalli27.github.io/mine-/project.html">Projects</a>
+      <a href="https://github.com/valluripalli27/mine-/blob/main/project.html">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
