--- a/Index.html
+++ b/Index.html
@@ -212,7 +212,7 @@
       <a href="#hero">Home</a>
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
-      <a href="https://lakshmi-project-2025.netlify.app" target="_blank" rel="noopener noreferrer">Projects</a>
+      <a href="https://github.com/valluripalli27/Project/blob/main/Index.html" target="_blank" rel="noopener noreferrer">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
