--- a/Index.html
+++ b/Index.html
@@ -224,7 +224,7 @@
     </section>
 
     <section id="about">
-      <img src="https://cdn.dribbble.com/users/31799/screenshots/13999189/media/1a8760c2f1c8ac12b36ff746c7a67c98.png" alt="UI Design Sample 1" width="250" />
+      <img src="https://cdn.dribbble.com/users/31799/screenshots/13999189/media/1a8760c2f1c8ac12b36ff746c7a67c98.png" alt="UI Design" style="width:250px; height:250px; border-radius:50%; object-fit:cover;" />
       <div>
         <h3>About Me</h3>
         <p>Innovative UI/UX Designer with a solid foundation in front-end development, including expertise in HTML5, CSS3, and React. With over 4+ years of experience designing and developing responsive, user-centered web applications, I specialize in crafting intuitive interfaces that enhance usability and engagement across all devices.
