--- a/Index.html
+++ b/Index.html
@@ -212,7 +212,7 @@
       <a href="#hero">Home</a>
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
-      <a href="https://lakshmi-project-2025.netlify.app">Projects</a> <!-- Link to projects page -->
+      <a href="https://lakshmi-project-2025.netlify.app/project.html" target="_blank" rel="noopener noreferrer">Projects</a> <!-- Link to projects page -->
       <a href="#contact">Contact</a>
     </nav>
   </header>
