--- a/Index.html
+++ b/Index.html
@@ -212,7 +212,7 @@
       <a href="#hero">Home</a>
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
-      <a href="Index.html">Projects</a><!-- Link to projects page -->
+      <a href="#skills">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -301,6 +301,34 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
           <div class="skill">Power BI</div>
         </div>
       </div>
+    </section>
+ <section id="Project">
+      <h2>Projects</h2>
+      <div class="gallery">
+    <a class="gallery-item" href="https://github.com/valluripalli27/mine-/blob/main/Salon.html">
+      <img src="images/salon.jpg" alt="Salon Project" />
+      <div class="project-info">
+        <h3>Salon Booking App</h3>
+        <p>BeautyPlus • 2024</p>
+      </div>
+    </a>
+
+    <a class="gallery-item" href="https://github.com/valluripalli27/clothing-app-/blob/main/index.html">
+      <img src="images/https://github.com/valluripalli27/mine-/blob/main/Cloth.jpg" alt="Clothing App" />
+      <div class="project-info">
+        <h3>Clothing E-Commerce</h3>
+        <p>Fashionista • 2019</p>
+      </div>
+    </a>
+
+    <a class="gallery-item" href="https://github.com/valluripalli27/Carbon-Footprint-Calculator/blob/main/index.html">
+      <img src="images/carbon.jpg" alt="Carbon Calculator" />
+      <div class="project-info">
+        <h3>Carbon Footprint Calculator</h3>
+        <p>GreenStep • 2024</p>
+      </div>
+    </a>
+  </div>
     </section>
 
     <section id="contact">
