--- a/Index.html
+++ b/Index.html
@@ -212,7 +212,7 @@
       <a href="#hero">Home</a>
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
-      <a href="#skills">Projects</a>
+      <a href="#Projects">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
