--- a/Index.html
+++ b/Index.html
@@ -212,7 +212,7 @@
       <a href="#hero">Home</a>
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
-      <a href="#Projects">Projects</a>
+      <a href="https://codepen.io/Prince-Seth/pen/empzBOJ">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -222,7 +222,6 @@
       <h2>Hello, I'm Lakshmi Prasanna</h2>
       <p>Developer & UI/UX Designer passionate about building scalable, user-friendly web applications with clean code and great design.</p>
     </section>
-
     <section id="about">
        <img src="https://i.pravatar.cc/250" alt="Lakshmi Prasanna Photo" />
       <div>
