--- a/Index.html
+++ b/Index.html
@@ -302,63 +302,7 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
       </div>
     </section>
  <section id="Project">
-      <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Projects</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #ffffff;
-      color: #222;
-      padding: 40px 20px;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 40px;
-      background-color: #f5f5f5;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      margin-bottom: 40px;
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
-
-    nav a {
-      margin-left: 25px;
-      text-decoration: none;
-      color: #222;
-      font-weight: 600;
-      font-size: 1rem;
-      transition: color 0.3s ease;
-    }
-
-    nav a:first-child {
-      margin-left: 0;
-    }
-
-    nav a:hover {
-      color: #0077b5; /* LinkedIn blue as hover */
-    }
-
-    .header-left {
-      font-weight: 700;
-      font-size: 1.1rem;
-      color: #333;
-    }
-
+  <h2>Projects</h2>
     h1 {
       text-align: center;
       font-size: 2.8rem;
