--- a/Index.html
+++ b/Index.html
@@ -343,17 +343,17 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
           <img src="images/salon.jpg" alt="Salon Project" />
           <div class="project-info">
             <h3>Salon Booking App</h3>
-            <p>BeautyPlus • 2024</p>
+            <p>BeautyPlus • 2025</p>
           </div>
         </a>
-        <a class="gallery-item" href="https://github.com/valluripalli27/clothing-app-/blob/main/index.html" target="_blank" rel="noopener noreferrer">
+       <a class="gallery-item" href="https://clothingbasicapp.netlify.app" target="_blank" rel="noopener noreferrer">
           <img src="images/Cloth.jpg" alt="Clothing App" />
           <div class="project-info">
             <h3>Clothing E-Commerce</h3>
             <p>Fashionista • 2019</p>
           </div>
         </a>
-        <a class="gallery-item" href="https://github.com/valluripalli27/Carbon-Footprint-Calculator/blob/main/index.html" target="_blank" rel="noopener noreferrer">
+     <a class="gallery-item" href="https://carbonsimple.netlify.app" target="_blank" rel="noopener noreferrer">
           <img src="images/carbon.jpg" alt="Carbon Calculator" />
           <div class="project-info">
             <h3>Carbon Footprint Calculator</h3>
