--- a/Index.html
+++ b/Index.html
@@ -339,7 +339,7 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
 <section id="projects">
       <h2>Projects</h2>
       <div class="gallery">
-        <a class="gallery-item" href="https://github.com/valluripalli27/mine-/blob/main/Salon.html" target="_blank" rel="noopener noreferrer">
+        <a class="gallery-item" href="https://saloonimp.netlify.app/" target="_blank" rel="noopener noreferrer">
           <img src="images/salon.jpg" alt="Salon Project" />
           <div class="project-info">
             <h3>Salon Booking App</h3>
