--- a/Index.html
+++ b/Index.html
@@ -347,7 +347,7 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
           </div>
         </a>
        <a class="gallery-item" href="https://clothingbasicapp.netlify.app" target="_blank" rel="noopener noreferrer">
-          <img src="images/Cloth.jpg" alt="Clothing App" />
+       <img src="https://raw.githubusercontent.com/valluripalli27/mine-/9e4f3d6be14cd703ed5a586fd07da91e30725b15/Cloth.jpg" alt="Clothing App" />
           <div class="project-info">
             <h3>Clothing E-Commerce</h3>
             <p>Fashionista • 2019</p>
