--- a/Index.html
+++ b/Index.html
@@ -340,7 +340,7 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
       <h2>Projects</h2>
       <div class="gallery">
         <a class="gallery-item" href="https://saloonimp.netlify.app/" target="_blank" rel="noopener noreferrer">
-        <img src="https://github.com/valluripalli27/mine-/blob/3c361a33b67667f1c0f2a6f396a9ae222d2dc6f7/spa.jpg" alt="Salon Project" />
+        <img src="https://github.com/valluripalli27/mine-/3c361a33b67667f1c0f2a6f396a9ae222d2dc6f7/spa.jpg" alt="Salon Project" />
           <div class="project-info">
             <h3>Salon Booking App</h3>
             <p>BeautyPlus • 2025</p>
@@ -354,7 +354,7 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
           </div>
         </a>
      <a class="gallery-item" href="https://carbonsimple.netlify.app" target="_blank" rel="noopener noreferrer">
-          <img src="images/carbon.jpg" alt="Carbon Calculator" />
+          <img src="https://github.com/valluripalli27/mine-/972df796f80531173f2bc1515c10b9cce86e4ba6/Carbon.jpg alt="Carbon Calculator" />
           <div class="project-info">
             <h3>Carbon Footprint Calculator</h3>
             <p>GreenStep • 2024</p>
