--- a/Index.html
+++ b/Index.html
@@ -258,7 +258,7 @@
       <p>Developer & UI/UX Designer passionate about building scalable, user-friendly web applications with clean code and great design.</p>
     </section>
     <section id="about">
-     <img src="https://github.com/valluripalli27/mine-/blob/main/desgn.jpg" alt="Lakshmi Prasanna" />
+   <img src="https://raw.githubusercontent.com/valluripalli27/mine-/main/desgn-new.jpg" alt="Lakshmi Prasanna" />
       <div>
         <h3>About Me</h3>
         <p>Innovative UI/UX Designer with a solid foundation in front-end development, including expertise in HTML5, CSS3, and React. With over 4+ years of experience designing and developing responsive, user-centered web applications, I specialize in crafting intuitive interfaces that enhance usability and engagement across all devices.
