--- a/Index.html
+++ b/Index.html
@@ -258,7 +258,7 @@
       <p>Developer & UI/UX Designer passionate about building scalable, user-friendly web applications with clean code and great design.</p>
     </section>
     <section id="about">
-<img src=""https://raw.githubusercontent.com/valluripalli27/mine-/81eb94aae6c4583fab17b6cdc08c12743e820a68/desgn.jpg" alt="Lakshmi Prasanna - UI/UX Design" width="600" />
+<img src="https://cdn.dribbble.com/userupload/12400370/file/original-e0e5ce4483b1df7054b63f1185d21339.jpg" alt="Lakshmi Prasanna - UI/UX Design" width="600" />
       <div>
         <h3>About Me</h3>
         <p>Innovative UI/UX Designer with a solid foundation in front-end development, including expertise in HTML5, CSS3, and React. With over 4+ years of experience designing and developing responsive, user-centered web applications, I specialize in crafting intuitive interfaces that enhance usability and engagement across all devices.
