--- a/Index.html
+++ b/Index.html
@@ -376,7 +376,7 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
 
  <footer style="text-align: center; padding: 15px; background: #f1f1f1; font-family: Arial, sans-serif; color: #555;">
   <br /><br />
-  <a href="https://www.linkedin.com/in/your-linkedin" target="_blank" style="margin: 0 10px; display: inline-block;">
+  <a href="https://www.linkedin.com/in/lakshmi-prasanna-8b3010160/in/your-linkedin" target="_blank" style="margin: 0 10px; display: inline-block;">
     <img src="https://cdn-icons-png.flaticon.com/24/174/174857.png" alt="LinkedIn" style="width:24px; height:24px;">
   </a>
   <a href="mailto:your.email@example.com" style="margin: 0 10px; display: inline-block;">
