--- a/Index.html
+++ b/Index.html
@@ -340,7 +340,7 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
       <h2>Projects</h2>
       <div class="gallery">
         <a class="gallery-item" href="https://saloonimp.netlify.app/" target="_blank" rel="noopener noreferrer">
-        <img src="https://github.com/valluripalli27/mine-/3c361a33b67667f1c0f2a6f396a9ae222d2dc6f7/spa.jpg" alt="Salon Project" />
+        <img src="https://raw.githubusercontent.com/valluripalli27/mine-/d10f57a35157b8ffa0f1260d991eedef6f79fc1a/spa.jpg" alt="Salon Project" />
           <div class="project-info">
             <h3>Salon Booking App</h3>
             <p>BeautyPlus • 2025</p>
