--- a/Index.html
+++ b/Index.html
@@ -340,7 +340,7 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
       <h2>Projects</h2>
       <div class="gallery">
         <a class="gallery-item" href="https://saloonimp.netlify.app/" target="_blank" rel="noopener noreferrer">
-        <img src="https://raw.githubusercontent.com/valluripalli27/mine-/main/spa.jpg" alt="Salon Project" />
+       <img src="https://raw.githubusercontent.com/valluripalli27/mine-/main/spa.jpg" alt="Salon Project" width="600" height="300" style="object-fit: cover;" />
           <div class="project-info">
             <h3>Salon Booking App</h3>
             <p>BeautyPlus • 2025</p>
