--- a/Index.html
+++ b/Index.html
@@ -4,119 +4,100 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>My Portfolio</title>
-  <style>
-    /* Reset */
+ <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
 
+    body, html {
+      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      color: #222;
+      scroll-behavior: smooth;
+    }
+
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      line-height: 1.6;
-      background: #f9f9f9;
-      color: #333;
+      transition: background-image 1s ease-in-out;
     }
 
-    header {
+    nav {
       position: fixed;
-      top: 0;
-      width: 100%;
-      background: #222;
-      padding: 1rem 2rem;
+      top: 20px;
+      right: 20px;
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      z-index: 1000;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    }
-
-    header h1 {
-      color: #f5a623;
-      font-weight: 700;
-      letter-spacing: 2px;
+      flex-direction: column;
+      gap: 1rem;
+      z-index: 10;
     }
 
     nav a {
-      color: #fff;
+      color: #222;
       text-decoration: none;
-      margin-left: 2rem;
-      font-weight: 600;
-      transition: color 0.3s ease;
+      font-weight: 500;
+      font-size: 1rem;
+      border-right: 3px solid transparent;
+      padding-right: 8px;
+      transition: border-color 0.3s ease;
+      text-align: right;
+      filter: drop-shadow(0 0 1px rgba(255,255,255,0.5));
     }
 
-    nav a:hover {
-      color: #f5a623;
+    nav a:hover,
+    nav a:focus {
+      border-color: #a67c7c;
+      outline: none;
     }
 
     main {
-      padding-top: 80px;
-      max-width: 900px;
-      margin: 0 auto;
-      padding-left: 20px;
-      padding-right: 20px;
+      position: relative;
+      z-index: 1;
     }
 
     section {
-      padding: 60px 0;
-      border-bottom: 1px solid #ddd;
+      padding: 100px 20px;
+      min-height: 100vh;
     }
 
     #hero {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
-      background: #222;
-      color: #f5a623;
-      border-radius: 8px;
-      padding: 100px 20px;
-      box-shadow: 0 0 10px rgba(245, 166, 35, 0.5);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
     }
 
-    #hero h2 {
-      font-size: 3rem;
+    #about, #skills, #contact {
+      background-color: #CAD9DA;
+    }
+
+    h2, h3 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1.1rem;
+      line-height: 1.6;
+      color: #444;
+    }
+
+    .skill-section {
       margin-bottom: 20px;
     }
 
-    #hero p {
-      font-size: 1.25rem;
-      max-width: 600px;
-      margin: 0 auto;
-    }
-
-    #about {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 40px;
-      align-items: center;
-    }
-
-    #about img {
-      flex: 1 1 250px;
-      border-radius: 50%;
-      max-width: 250px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-
-    #about div {
-      flex: 2 1 400px;
-    }
-
-    #about h3 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: #f5a623;
-    }
-
-    #skills .skill-section {
-      margin-bottom: 30px;
-    }
-
-    .skill-section label {
-      display: block;
-      font-weight: bold;
-      margin: 10px 0;
+    .skill-header {
+      font-size: 1.5rem;
+      font-weight: 600;
       cursor: pointer;
-      color: #f5a623;
+      margin-bottom: 10px;
+      background: #f3f3f3;
+      padding: 10px 15px;
+      border-radius: 8px;
     }
 
     .skill-list {
@@ -126,117 +107,62 @@
       margin-top: 10px;
     }
 
-    input[type="checkbox"]:checked + label + .skill-list {
-      display: flex;
-    }
-
     .skill {
-      background: #f5a623;
-      color: #222;
-      padding: 10px 20px;
-      border-radius: 50px;
-      font-weight: 600;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      transition: background 0.3s ease;
-      cursor: default;
-    }
-
-    #projects .project-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-    }
-
-   /* Projects */
-    #projects h2 {
-      text-align: center;
-      font-size: 2.8rem;
-      margin-bottom: 50px;
-      color: #111;
-      font-weight: 600;
-    }
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 40px;
-      max-width: 1000px;
-      margin: 0 auto;
-      flex-grow: 1;
-    }
-    .gallery-item {
-      background-color: #f9f9f9;
+      background: white;
+      padding: 8px 12px;
       border-radius: 20px;
-      overflow: hidden;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
-      text-decoration: none;
-      color: inherit;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      display: flex;
-      flex-direction: column;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
-    .gallery-item:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 10px 24px rgba(0, 0, 0, 0.15);
-    }
-    .gallery-item img {
-      width: 100%;
-      height: auto;
+
+    form input, form textarea {
       display: block;
-      object-fit: cover;
-      flex-shrink: 0;
-    }
-    .project-info {
-      padding: 20px;
-      text-align: left;
-    }
-    .project-info h3 {
-      font-family: 'Georgia', serif;
-      font-size: 1.4rem;
-      margin-bottom: 8px;
-    }
-    .project-info p {
-      font-size: 0.95rem;
-      color: #777;
-      margin: 0;
-    }
-    #contact form {
-      max-width: 500px;
-      margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-
-    #contact input, #contact textarea {
-      padding: 12px;
-      border-radius: 5px;
+      width: 100%;
+      max-width: 400px;
+      margin: 10px auto;
+      padding: 10px;
       border: 1px solid #ccc;
+      border-radius: 6px;
       font-size: 1rem;
-      resize: vertical;
     }
 
-    #contact button {
-      background: #f5a623;
+    form button {
+      display: block;
+      margin: 10px auto;
+      padding: 10px 20px;
+      background: #333;
+      color: white;
       border: none;
-      padding: 15px;
-      font-weight: 700;
-      color: #222;
-      border-radius: 5px;
+      border-radius: 6px;
       cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    #contact button:hover {
-      background: #e59400;
     }
 
     footer {
       text-align: center;
-      padding: 20px 10px;
-      color: #999;
-      font-size: 0.9rem;
-      background: #222;
-      margin-top: 40px;
+      padding: 30px;
+      background: #f1f1f1;
+    }
+
+    footer a img {
+      width: 48px;
+      margin: 0 10px;
+    }
+
+    @media (max-width: 600px) {
+      h2 {
+        font-size: 2rem;
+      }
+
+      nav {
+        position: static;
+        flex-direction: row;
+        justify-content: center;
+        margin-bottom: 2rem;
+      }
+
+      nav a {
+        border: none;
+        padding-right: 0;
+      }
     }
   </style>
 </head>
@@ -287,25 +213,22 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
   </div>
       </div>
     </section>
-
-    <section id="skills">
+  <section id="skills">
       <h2>My Skills</h2>
 
       <div class="skill-section">
-        <input type="checkbox" id="frontend">
-        <label for="frontend">🎨 Frontend Development</label>
+        <div class="skill-header" onclick="toggleSkill(this)">🎨 Frontend Development</div>
         <div class="skill-list">
           <div class="skill">⚛️ React.js</div>
           <div class="skill">📜 JavaScript / TypeScript</div>
           <div class="skill">📜Flexbox & Responsive Design</div>
-          <div class="skill">🎨 CSS3 </div>
+          <div class="skill">🎨 CSS3</div>
           <div class="skill">🖼️ HTML5</div>
         </div>
       </div>
 
       <div class="skill-section">
-        <input type="checkbox" id="uxdesign">
-        <label for="uxdesign">🎯 UX Design & Research</label>
+        <div class="skill-header" onclick="toggleSkill(this)">🎯 UX Design & Research</div>
         <div class="skill-list">
           <div class="skill">Wireframing</div>
           <div class="skill">Prototyping</div>
@@ -315,8 +238,7 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
       </div>
 
       <div class="skill-section">
-        <input type="checkbox" id="uiux">
-        <label for="uiux">🖌️ UI/UX Tools</label>
+        <div class="skill-header" onclick="toggleSkill(this)">🖌️ UI/UX Tools</div>
         <div class="skill-list">
           <div class="skill">Figma</div>
           <div class="skill">Adobe XD</div>
@@ -326,8 +248,7 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
       </div>
 
       <div class="skill-section">
-        <input type="checkbox" id="data">
-        <label for="data">📊 Data & Analytics</label>
+        <div class="skill-header" onclick="toggleSkill(this)">📊 Data & Analytics</div>
         <div class="skill-list">
           <div class="skill">SQL</div>
           <div class="skill">Python</div>
@@ -405,6 +326,49 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
         form.reset();
       }, 1500);
     });
+  </script>
+
+<script>
+    const hero = document.getElementById('hero');
+    const backgrounds = [
+      "url('data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"400\" height=\"400\"><rect width=\"100%\" height=\"100%\" fill=\"%23fef6f9\"/><circle cx=\"100\" cy=\"100\" r=\"80\" fill=\"%23fcd5ce\"/><circle cx=\"300\" cy=\"250\" r=\"100\" fill=\"%23cdb4db\"/></svg>')",
+      "url('data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"400\" height=\"400\"><rect width=\"100%\" height=\"100%\" fill=\"%23e0f7fa\"/><circle cx=\"120\" cy=\"120\" r=\"90\" fill=\"%23b2ebf2\"/><circle cx=\"270\" cy=\"220\" r=\"110\" fill=\"%23a5d6a7\"/></svg>')",
+      "url('data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"400\" height=\"400\"><rect width=\"100%\" height=\"100%\" fill=\"%23fffde7\"/><rect x=\"30\" y=\"30\" width=\"100\" height=\"100\" rx=\"20\" fill=\"%23ffe082\"/><rect x=\"220\" y=\"180\" width=\"120\" height=\"120\" rx=\"30\" fill=\"%23ffab91\"/></svg>')"
+    ];
+
+    let currentIndex = 0;
+    function changeHeroBackground() {
+      currentIndex = (currentIndex + 1) % backgrounds.length;
+      hero.style.backgroundImage = backgrounds[currentIndex];
+    }
+
+    hero.style.backgroundImage = backgrounds[0];
+    setInterval(changeHeroBackground, 10000);
+
+    document.querySelectorAll('nav a').forEach(anchor => {
+      anchor.addEventListener('click', e => {
+        e.preventDefault();
+        const target = document.querySelector(anchor.getAttribute('href'));
+        target.scrollIntoView({ behavior: 'smooth' });
+      });
+    });
+
+    const form = document.getElementById('contactForm');
+    const formMessage = document.getElementById('formMessage');
+    form.addEventListener('submit', e => {
+      e.preventDefault();
+      formMessage.textContent = 'Sending...';
+      setTimeout(() => {
+        formMessage.textContent = 'Thank you! I will get back to you soon.';
+        form.reset();
+      }, 1500);
+    });
+
+    function toggleSkill(header) {
+      const list = header.nextElementSibling;
+      const isVisible = list.style.display === 'flex';
+      list.style.display = isVisible ? 'none' : 'flex';
+    }
   </script>
 </body>
 </html>
