--- a/Index.html
+++ b/Index.html
@@ -295,19 +295,23 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
     </section>
   </main>
 
- <footer style="text-align: center; padding: 15px; background: #f1f1f1; font-family: Arial, sans-serif; color: #555;">
-  <br /><br />
-  <a href="https://www.linkedin.com/in/lakshmi-prasanna-8b3010160/in/your-linkedin" target="_blank" style="margin: 0 10px; display: inline-block;">
-    <img src="https://cdn-icons-png.flaticon.com/24/174/174857.png" alt="LinkedIn" style="width:24px; height:24px;">
-  </a>
-  <a href="mailto:your.email@example.com" style="margin: 0 10px; display: inline-block;">
-    <img src="https://cdn-icons-png.flaticon.com/24/732/732200.png" alt="Gmail" style="width:24px; height:24px;">
-  </a>
-  <a href="https://medium.com/@your-medium" target="_blank" style="margin: 0 10px; display: inline-block;">
-    <img src="https://cdn-icons-png.flaticon.com/24/5968/5968866.png" alt="Medium" style="width:24px; height:24px;">
-  </a>
-</footer>
- 
+<!-- Footer -->
+  <footer>
+    <div class="social-icons">
+      <a href="https://www.linkedin.com/in/lakshmi-prasanna-8b3010160" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
+      </a>
+      <a href="https://github.com/YOUR_USERNAME" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
+      </a>
+      <a href="https://medium.com/@YOUR_USERNAME" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111505.png" alt="Medium">
+      </a>
+      <a href="mailto:your.email@example.com">
+        <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Gmail">
+      </a>
+    </div>
+  </footer> 
 
 <script>
     const hero = document.getElementById('hero');
