--- a/Index.html
+++ b/Index.html
@@ -257,7 +257,7 @@
 </head>
 <body>
   <header>
-    <h1>Lakshmi</h1>
+    <h1>꧁𝕷𝕻꧂ </h1>
     <nav>
       <a href="#hero">Home</a>
       <a href="#about">About</a>
@@ -269,8 +269,8 @@
 
   <main>
     <section id="hero">
-     <h2>Hello, I'm Lakshmi Prasanna</h2>
-      <p>Developer & UI/UX Designer passionate about building scalable, user-friendly web applications with clean code and great design.</p>
+     <h2>Hello 👋 </h2>
+      <p> I'm Lakshmi Prasanna. Developer & UI/UX Designer passionate about building scalable, user-friendly web applications with clean code and great design.</p>
     </section>
     <section id="about">
 <img src="https://raw.githubusercontent.com/valluripalli27/mine-/e4f5bd967b6c95a6831fb6e9c8f69d11b3c41e70/bg.jpg" alt="Lakshmi Prasanna - UI/UX Design" width="600" />
