--- a/Index.html
+++ b/Index.html
@@ -356,15 +356,22 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
             <p>BeautyPlus • 2025</p>
           </div>
         </a>
+         <a class="gallery-item" href="https://saloonimp.netlify.app/" target="_blank" rel="noopener noreferrer">
+       <img src="https://raw.githubusercontent.com/valluripalli27/mine-/main/spa.jpg" alt="Plant Health Companion" width="600" height="300" style="object-fit: cover;" />
+          <div class="project-info">
+            <h3>Plant Health Companion Case Study </h3>
+            <p>PlantWell • 2025</p>
+          </div>
+        </a>
        <a class="gallery-item" href="https://clothingbasicapp.netlify.app" target="_blank" rel="noopener noreferrer">
-       <img src="https://raw.githubusercontent.com/valluripalli27/mine-/9e4f3d6be14cd703ed5a586fd07da91e30725b15/Cloth.jpg" alt="Clothing App" />
+       <img src="https://raw.githubusercontent.com/valluripalli27/mine-/9e4f3d6be14cd703ed5a586fd07da91e30725b15/Cloth.jpg" alt="Clothing App" width="600" height="300" style="object-fit: cover;" />
           <div class="project-info">
             <h3>Clothing E-Commerce</h3>
             <p>Fashionista • 2019</p>
           </div>
         </a>
      <a class="gallery-item" href="https://carbonsimple.netlify.app" target="_blank" rel="noopener noreferrer">
-          <img src="https://github.com/valluripalli27/mine-/972df796f80531173f2bc1515c10b9cce86e4ba6/Carbon.jpg alt="Carbon Calculator" />
+          <img src="https://github.com/valluripalli27/mine-/972df796f80531173f2bc1515c10b9cce86e4ba6/Carbon.jpg alt="Carbon Calculator" width="600" height="300" style="object-fit: cover;" />
           <div class="project-info">
             <h3>Carbon Footprint Calculator</h3>
             <p>GreenStep • 2024</p>
