--- a/Index.html
+++ b/Index.html
@@ -357,7 +357,7 @@ Adept in tools like Figma, Adobe XD, Sketch, and Adobe Creative Suite, I focus o
           </div>
         </a>
          <a class="gallery-item" href="https://saloonimp.netlify.app/" target="_blank" rel="noopener noreferrer">
-       <img src="https://raw.githubusercontent.com/valluripalli27/mine-/main/spa.jpg" alt="Plant Health Companion" width="600" height="300" style="object-fit: cover;" />
+       <img src="https://raw.githubusercontent.com/valluripalli27/Case-study--plant/f405dcb5d7c77c61bfbcd0f4c99389ce4611ca9d/bg.png" alt="Plant Health Companion" width="600" height="300" style="object-fit: cover;" />
           <div class="project-info">
             <h3>Plant Health Companion Case Study </h3>
             <p>PlantWell • 2025</p>
