--- a/Index.html
+++ b/Index.html
@@ -260,7 +260,7 @@
     <h1>꧁𝕷𝕻꧂ </h1>
     <nav>
       <a href="#hero">Home</a>
-      <a href="https://aboutse.netlify.app" target="_blank" rel="noopener noreferrer">About</a>
+      <a href="https://aboutse.netlify.app">About</a>
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
