--- a/Index.html
+++ b/Index.html
@@ -260,12 +260,26 @@
     <h1>꧁𝕷𝕻꧂ </h1>
     <nav>
       <a href="#hero">Home</a>
-      <a href="https://aboutse.netlify.app">About</a>
+      <a href="https://aboutse.netlify.app" target="_self">About</a>
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
+<script>
+  document.querySelectorAll('nav a').forEach(anchor => {
+    const href = anchor.getAttribute('href');
+    if (href.startsWith('#')) {
+      anchor.addEventListener('click', e => {
+        e.preventDefault();
+        const target = document.querySelector(href);
+        if (target) {
+          target.scrollIntoView({ behavior: 'smooth' });
+        }
+      });
+    }
+  });
+</script>
 
   <main>
     <section id="hero">
