--- a/Index.html
+++ b/Index.html
@@ -328,7 +328,7 @@
           </div>
         </a>
          <a class="gallery-item" href="https://saloonimp.netlify.app/" target="_blank" rel="noopener noreferrer">
-       <img src="https://raw.githubusercontent.com/valluripalli27/Case-study--plant/f405dcb5d7c77c61bfbcd0f4c99389ce4611ca9d/bg.png" alt="Plant Health Companion" width="600" height="300" style="object-fit: cover;" />
+       <img src="https://raw.githubusercontent.com/valluripalli27/Case-study--plant/7bb61899d590b51a1e4b674fbc78fc4b5a4b2bb1/Back%20.png" alt="Plant Health Companion" width="600" height="300" style="object-fit: cover;" />
           <div class="project-info">
             <h3>Plant Health Companion Case Study </h3>
             <p>PlantWell • 2025</p>
