--- a/Index.html
+++ b/Index.html
@@ -327,7 +327,7 @@
             <p>BeautyPlus • 2025</p>
           </div>
         </a>
-         <a class="gallery-item" href="https://saloonimp.netlify.app/" target="_blank" rel="noopener noreferrer">
+         <a class="gallery-item" href="https://casestudypl.netlify.app/" target="_blank" rel="noopener noreferrer">
        <img src="https://raw.githubusercontent.com/valluripalli27/Case-study--plant/7bb61899d590b51a1e4b674fbc78fc4b5a4b2bb1/Back%20.png" alt="Plant Health Companion" width="600" height="300" style="object-fit: cover;" />
           <div class="project-info">
             <h3>Plant Health Companion Case Study </h3>
