--- a/Index.html
+++ b/Index.html
@@ -342,7 +342,7 @@
           </div>
         </a>
      <a class="gallery-item" href="https://carbonsimple.netlify.app" target="_blank" rel="noopener noreferrer">
-          <img src="https://github.com/valluripalli27/mine-/972df796f80531173f2bc1515c10b9cce86e4ba6/Carbon.jpg alt="Carbon Calculator" width="600" height="300" style="object-fit: cover;" />
+          <img src="https://github.com/valluripalli27/mine-/972df796f80531173f2bc1515c10b9cce86e4ba6/Carbon.jpg" alt="Carbon Calculator" width="600" height="300" style="object-fit: cover;" />
           <div class="project-info">
             <h3>Carbon Footprint Calculator</h3>
             <p>GreenStep • 2024</p>
